added endpoint to return all mayor names
