# internal/rest/mayor.go
@@ -12,9 +12,9 @@ import (
 // @Tags         Mayor
 // @Accept       */*
 // @Produce      json
-// @Success      200   {object}  model.Candidate
-// @Failure      400   {object}  nil
-// @Failure      404   {object}  nil
+// @Success      200  {object}  model.Candidate
+// @Failure      400  {object}  nil
+// @Failure      404  {object}  nil
 // @Router       /mayor/current [get]
 func getCurrentMayor(c *gin.Context) {
 	electionPeriod, _ := mongo.GetCurrentElectionPeriod()
@@ -23,4 +23,22 @@ func getCurrentMayor(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, electionPeriod.Winner)
+}
+
+// @Summary      Get names of all mayors
+// @Description  Returns all mayor names
+// @Tags         Mayor
+// @Accept       */*
+// @Produce      json
+// @Success      200  {object}  []string
+// @Failure      400  {object}  nil
+// @Failure      404  {object}  nil
+// @Router       /mayor/names [get]
+func GetAllMayorNames(c *gin.Context) {
+	names, _ := mongo.GetAllMayorNames()
+	if names == nil {
+		c.JSON(http.StatusNotFound, gin.H{"message": "no mayors found"})
+		return
+	}
+	c.JSON(http.StatusOK, names)
 }
